--- a/assets/scss/partials/molecules/_cards.scss
+++ b/assets/scss/partials/molecules/_cards.scss
@@ -145,7 +145,7 @@
   &__footer {
     display: flex;
     background-color: $white;
-    z-index: 10000;
+    z-index: 2;
     position: relative;
     padding: ($pulse/2) 0;
     overflow: hidden;
